# sfml_directx

./: CMakeLists.txt  README.md  main.cpp
Debug/: prototyper.ilk  sfml_directx.ilk
Release/: prototyper.exe-00d34b8dd3bf4f2498a59900fb49508911v2.symcache  prototyper.exe-00d34b8dd3bf4f2498a59900fb4950892v2.symcache
